<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/type"
        android:textColor="@color/sub_title_text"
        android:textSize="15sp"/>

    <RadioGroup
        android:id="@+id/type_group"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:clickable="false">

        <RadioButton
            android:id="@+id/type_debit"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="end"
            android:textColor="@drawable/selector_text"
            android:text="@string/debit"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@color/sub_title_text" />

        <RadioButton
            android:id="@+id/type_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@drawable/selector_text"
            android:button="@null"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/credit" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/type"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/sub_title_text"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/prepaid_yes"
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:button="@null"
            android:gravity="end"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@drawable/selector_text"
            android:text="@string/yes"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@color/sub_title_text" />

        <RadioButton
            android:id="@+id/prepaid_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="@drawable/selector_text"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:textColor="@color/sub_title_text"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/title_text"
        android:textSize="15sp"
        android:shadowColor="@color/black"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:layout_marginTop="5dp"
        tools:text="Denmark" />

</LinearLayout>







